maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:12: error: ';' expected but '[' found.
        return[x, y];
              ^